--- a/learn-certs-pr/azure-data-engineer/renew/index.yml
+++ b/learn-certs-pr/azure-data-engineer/renew/index.yml
@@ -13,6 +13,9 @@ summary: |-
 skills:
 - Aufnahme im Petabyte-Bereich mit Azure Data Factory
 - Führen Sie mit Azure Data Factory eine codefreie Transformation im Maßstab durch
+- Daten mit Azure Data Factory integrieren
+- Daten-Warehouse mit Azure Synapse Analytics entwerfen
+- Daten mit PolyBase in Azure Synapse Analytics importieren
 examsPassed:
 - dp-200, dp-201 oder dp-203
 studyGuideDescription: 'Verwenden Sie diese Sammlung von Lernmodulen, um sich auf diese Microsoft-Zertifizierung vorzubereiten: Azure Data Engineer Associate-Erneuerungsbewertung.'
