--- a/learn-certs-pr/azure-iot-developer-specialty/index.yml
+++ b/learn-certs-pr/azure-iot-developer-specialty/index.yml
@@ -6,11 +6,15 @@ metadata:
 uid: certification.azure-iot-developer-specialty
 iconUrl: /media/learn/certification/badges/microsoft-certified-specialty-badge.svg
 summary: |-
-  Der Azure IoT-Entwickler implementiert die Konfiguration und führt Codierungsaufgaben aus, die zum Erstellen und Verwalten der Cloud- und Edge-Elemente einer IoT-Lösung erforderlich sind. Neben Konfiguration und Wartung von Geräten über Cloud-Services stellt der IoT-Entwickler auch die Geräte selbst auf. Der IoT-Entwickler ist für die Wartung und Fehlerbehebung der Konfiguration der Geräte während deren gesamten Lebenszyklus verantwortlich.
+  Kandidaten für diese Zertifizierung sollten über Fachwissen bei der Implementierung der Konfigurations- und Kodierungsaufgaben verfügen, die für die Erstellung und Wartung der Cloud- und Edge -Teile einer IoT-Lösung erforderlich sind.
   
-  Der  IoT-Entwickler implementiert Entwurfsspezifikationen für  IoT-Lösungen, einschließlich Gerätetopologie, Konnektivität, Diagnose und Überwachung sowie Sicherheit. Der IoT- entwickelt und stellt Module bereit und konfiguriert Gerätenetworking für den IoT Edge-Teil der Lösung. Der IoT-Entwickler implementiert Entwürfe für Lösungen zur Verwaltung von Datenpipelines, einschließlich Überwachung und Datentransformation in Bezug auf IoT. Der IoT-Entwickler arbeitet mit dem Azure IoT-Architekten , Dateningenieuren und anderen Stakeholdern zusammen, um eine erfolgreiche Geschäftsintegration sicherzustellen.
+  Zu den Aufgaben dieser Rolle gehören die Bereitstellung physischer Geräte, deren Konfiguration und Wartung mithilfe von Cloud-Diensten, sowie die Wartung und Fehlerbehebung der Konfiguration während des gesamten Lebenszyklus des Geräts.
   
-  IoT-Entwickler sollten ein allgemeines Verständnis der Gerätetypen und Azure-Services haben , einschließlich Datenspeicheroptionen, Datenanalyse, Datenverarbeitung, KI und anderer Platform-as-a-Service-Optionen. IoT-Entwickler müssen in der Lage sein, in mindestens einer von Azure IoT SDK unterstützten Sprache zu programmieren.
+  Azure IoT-Entwickler sind auch für die Implementierung von Designspezifikationen für IoT-Lösungen verantwortlich, einschließlich Gerätetopologie, Konnektivität, Diagnose und Überwachung, sowie Sicherheit. Diese Fachleute entwickeln und implementieren Module und konfigurieren die Gerätevernetzung für den Azure IoT Edge -Teil der Lösung. Darüber hinaus implementieren sie Entwürfe für Lösungen zur Verwaltung von Datenpipelines, einschließlich Überwachung und Datentransformation im Zusammenhang mit dem IoT.
+  
+  Azure IoT-Entwickler arbeiten mit Architekten, Dateningenieuren und anderen Stakeholdern zusammen, um eine erfolgreiche Business-Integration zu gewährleisten, einschließlich der Implementierung des Azure Digital Twins-Dienstes.
+  
+  Kandidaten für diese Zertifizierung sollten über ein allgemeines Verständnis von Gerätetypen und Azure-Diensten verfügen, einschließlich Datenspeicheroptionen, Datenanalyse, Datenverarbeitung, KI und andere Platform-as-a-Service-Optionen (PaaS). Sie müssen in der Lage sein, in mindestens einer vom Azure IoT Software Development Kit unterstützten (SDK-unterstützten) Sprache zu programmieren.
 subTitle: Azure IoT-Entwickler entwickeln Cloud- und Edge-Komponenten einer Azure IoT-Lösung.
 levels:
 - intermediate
