--- a/learn-certs-pr/azure-stack-hub-operator/index.yml
+++ b/learn-certs-pr/azure-stack-hub-operator/index.yml
@@ -15,7 +15,7 @@ summary: |-
   Kandidaten für diese Zertifizierung sollten über umfangreiche Erfahrung in der Verwaltung und dem Betrieb von Azure Stack Hub-Umgebungen verfügen. Sie sollten ein umfassendes Verständnis von Azure haben und über Kenntnisse in den Bereichen Virtualisierung, Netzwerk und Identitätsmanagement verfügen. Sie müssen verstehen, wie Azure Stack Hub DevOps-Prozesse und das hybride Entwicklungsmodellsteh ermöglicht.
 subTitle: Kandidaten für die Azure Stack Hub Operator Associate-Zertifizierung sind Azure-Administratoren oder Azure Stack Hub-Betreiber, die Endbenutzern oder Kunden mi Hilfe von Azure Stack Hub Cloud-Services aus ihrem eigenen Rechenzentrum bereitstellen.
 levels:
-- advanced
+- intermediate
 skills:
 - Erbringung von Serviceleistungen
 - Implementierung der Rechenzentrumsintegration
