--- a/learn-certs-pr/d365-functional-consultant-financials/index.yml
+++ b/learn-certs-pr/d365-functional-consultant-financials/index.yml
@@ -7,6 +7,8 @@ uid: certification.d365-functional-consultant-financials
 certificationRenewalUid: renewal.d365-functional-consultant-financials
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: |-
+  <div><font color='red'><strong>Diese Zertifizierungsseite enthält alle in den Prüfungen für dieses Zertifikat getesteten Kompetenzen. Nicht enthalten sind kürzlich oder zukünftig vorgenommene Änderungen dieser Fertigkeiten. Weitere Informationen über kürzliche oder zukünftige Änderungen finden Sie in auf der Seite mit den Details zur Prüfung.</strong></font><br/><br/></div>
+
   Verwenden Sie diese Zertifizierung, um Ihre Fähigkeiten unter Beweis zu stellen und Ihre Karriere voranzutreiben, wenn Sie Erfahrung als Fachberater haben, der Geschäftsanforderungen analysiert und diese in erfolgreiche Geschäftsprozesse und Lösungen auf Grundlage von bewährten Praktiken der Branche umsetzt. Sie müssen Erfahrung in der Implementierung und Konfiguration von Dynamics 365 Finance haben, um die Geschäftsanforderungen zu erfüllen.
 
   Diese Zertifizierung eignet sich gut für Personen in Finanzabteilungen, die in den Bereichen Debitorenbuchhaltung, Kreditorenbuchhaltung, Hauptbuch, Anlagevermögen, Budgetierung, Kostenrechnung und Kostenmanagement oder Ausgaben tätig sind.Sie müssen über ein grundlegendes Verständnis von Rechnungslegungsgrundsätze und Finanzoperationen verfügen.
