--- a/learn-certs-pr/d365-functional-consultant-marketing/renew/index.yml
+++ b/learn-certs-pr/d365-functional-consultant-marketing/renew/index.yml
@@ -9,9 +9,10 @@ assessmentId: ce559cae-50e0-48a2-b43a-e6cf0399e559
 durationInMinutes: 45
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: |-
-  Wenn Sie über diese Zertifizierung verfügen und diese innerhalb von sechs Monaten abläuft, sind Sie berechtigt, diese zu erneuern.Zeigen Sie, dass Sie mit den neuesten Dynamics 365 Customer Service-Aktualisierungen auf dem neuesten Stand sind, indem Sie die Erneuerungsbewertung bestehen.Sie können sich auf die Erneuerung auch mit der kuratierten Sammlung von Lernmodulen vorbereiten.
+  Wenn Sie über diese Zertifizierung verfügen und diese innerhalb von sechs Monaten abläuft, sind Sie berechtigt, diese zu erneuern. Zeigen Sie, dass Sie mit den neuesten Dynamics 365 Customer Service-Aktualisierungen auf dem neuesten Stand sind, indem Sie die Erneuerungsbewertung bestehen.Sie können sich auf die Erneuerung auch mit der kuratierten Sammlung von Lernmodulen vorbereiten.
 skills:
 - Verwalten Sie Kunden in Dynamics 365 Marketing
+- Ein Webinar Event in Dynamics 365 Marketing erstellen
 - Erstellen Sie ein Umfrageprojekt mit Dynamics 365 Customer Voice
 - Erstellen Sie Umfragen mit Dynamics 365 Customer Voice
 - Automatisieren Sie Dynamics 365 Customer Voice-Umfragen mit Power Automate
