--- a/learn-certs-pr/d365-functional-consultant-sales/renew/index.yml
+++ b/learn-certs-pr/d365-functional-consultant-sales/renew/index.yml
@@ -11,6 +11,8 @@ iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.s
 summary: |-
   Wenn Sie über diese Zertifizierung verfügen und sie innerhalb von sechs Monaten abläuft, sind Sie berechtigt, diese zu erneuern. Zeigen Sie, dass Sie mit den neuesten Aktualisierungen von Dynamics 365 Customer Insights und Sales Insights auf dem letzten Stand sind, indem Sie die Prüfung zur Erneuerung bestehen.Sie können sich auf die Erneuerung auch mit der kuratierten Sammlung von Lernmodulen vorbereiten.
 skills:
+- Bearbeiten Sie Kundenaufträge mit Dynamics 365 Sales
+- Verwalten und organisieren Sie Ihren Produktkatalog mit Dynamics 365 Sales
 - Erstellen eines einheitlichen Kundenprofils in Dynamics 365 Customer Insights
 - Arbeiten mit Dynamics 365 Customer Insights
 - Sales Insights konfigurieren
