--- a/learn-certs-pr/d365-functional-consultant-supply-chain-management/index.yml
+++ b/learn-certs-pr/d365-functional-consultant-supply-chain-management/index.yml
@@ -7,29 +7,20 @@ uid: certification.d365-functional-consultant-supply-chain-management
 certificationRenewalUid: renewal.d365-functional-consultant-supply-chain-management
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: |-
-  ‚Wenn Sie ein Fachberater oder Geschäftsanwender mit einem grundlegenden Verständnis der Industriestandards für das Lieferkettenmanagement sind, könnte diese Zertifizierung gut zu Ihnen passen. Sie benötigen außerdem Erfahrung in der Konfiguration und Implementierung von Dynamics 365 Supply Chain Management , um die Anforderungen Ihres Unternehmens zu erfüllen.Fachberater für Supply Chain Management sind wichtige Ressourcen, die mit Entwicklern, Lösungsarchitekten, Projektmanagern und Funktionsberatern in den Bereichen Finanzen, Handel und Fertigung zusammenarbeiten.
+  Kandidaten für diese Prüfung analysieren Geschäftsanforderungen und übersetzen diese Anforderungen in vollständig realisierte Geschäftsprozesse und Lösungen, die bewährte Praktiken der Branche umsetzen. Kandidaten dienen als Schlüsselressource bei der Implementieren und Konfiguration von Anwendungen zur Erfüllung der Geschäftsanforderungen.
   
-  Wenn Sie mehr Erfahrung benötigen, bevor Sie versuchen, diese Zertifizierung zu erhalten, finden Sie hier einige Vorschläge&#58;
+  Kandidaten für diese Prüfung verfügen über ein grundlegendes Verständnis der Buchhaltungsgrundsätze und der finanziellen Abläufe von Unternehmen, Kundenservice, Außendienst, Fertigung, Einzelhandel und Lieferkettenmanagement. Sie spezialisieren sich in der Regel auf eine oder mehrere Funktionsgruppen von Finanz- und Betriebsanwendungen, einschließlich Finanzen, Fertigung und Lieferkettenmanagement.
   
-  - Studieren Sie die Supply-Chain-Management-Module in Microsoft Learn und führen Sie weitere praktische Übungen durch.
-  - Melden Sie sich für einen von Dozenten geleiteten Schulungskurs an, der die Kurse MB-300 oder MB-330 abdeckt.
-  - Treten Sie der Community unter [community.dynamics.com](https://community.dynamics.com/), bei oder treten Sie einer Benutzergruppe bei.
-  - Schauen Sie einem Fachberater für Supply Chain Management zu und helfen Sie bei der Implementierung von Dynamics 365 Supply Chain Management-Funktionen.
-  - Holen Sie sich einen Mentor, besichtigen Sie Lagerhäuser und lernen Sie, wie Dinge hergestellt werden.
-  - Stellen Sie Fragen und lernen Sie von Experten und Kunden.
+  Kandidaten müssen über Grundkenntnisse in den Praktiken des Lieferantenmanagements verfügen, einschließlich Beschaffung, Handel, Logistik, Lagerverwaltung und Transportmanagement.
 subTitle: 'Dynamics 365 Supply Chain Management Functional Consultants rationalisieren die Kostenrechnung, Bestandsführung, Masterplanung und Lagerverwaltung für ihre Kunden.'
 levels:
 - intermediate
 skills:
-- Verwendung gängiger Funktionen und Tools zur Implementierung
-- Konfigurieren von Sicherheit, Prozessen und Optionen
-- Verwalten von Finanz- und Betriebsdaten
-- Überprüfung und Support der Lösung
 - Implementieren des Produktinformationsmanagements
-- Implementieren der Bestandsführung
+- Bestandsmanagement implementieren 
 - Implementieren und verwalten von Supply-Chain-Prozessen
 - Implementieren der Lagerverwaltung und des Transportmanagements
-- Masterplanung implementieren
+- Planungsoptimierung implementieren
 roles:
 - functional-consultant
 type: role-based
