--- a/learn-certs-pr/exams/dp-203.yml
+++ b/learn-certs-pr/exams/dp-203.yml
@@ -6,10 +6,13 @@ metadata:
 uid: exam.dp-203
 displayName: DP-203
 summary: |-
-  Azure Data Engineers integrieren, transformieren und konsolidieren Daten aus verschiedenen strukturierten und unstrukturierten Datensystemen in Strukturen, die für die Erstellung von Analyselösungen geeignet sind.
+  Kandidaten für diese Prüfung sollten über Fachwissen zur Integration, Umwandlung und Konsolidierung von Daten aus verschiedenen strukturierten und unstrukturierten Datensystemen in eine Struktur verfügen, die für den Aufbau von Analyselösungen geeignet ist.
   
-  Kandidaten für die Prüfung DP-203&#58; Data Engineering on Microsoft Azure müssen über fundierte Kenntnisse in Datenverarbeitungssprachen wie SQL, Python oder Scala verfügen und die Struktur von Parallelverarbeitung und Datenarchitektur verstehen.
+  Azure Data Engineers helfen Stakeholdern, die Daten durch Exploration zu verstehen, und sie bauen und pflegen sichere und konforme Datenverarbeitungspipelines unter Verwendung verschiedener Tools und Techniken. Diese Fachleute nutzen verschiedene Azure-Datendienste und Sprachen, um bereinigte und verbesserte Datensätze für die Analyse zu speichern und zu erstellen.
   
+  Azure Data Engineers helfen auch dabei, sicherzustellen, dass Datenpipelines und Datenspeicher leistungsstark, effizient, organisiert und zuverlässig sind, und zwar unter Berücksichtigung einer Reihe von Geschäftsanforderungen und -einschränkungen. Sie kümmern sich schnell um unvorhergesehene Probleme und minimieren Datenverluste. Außerdem entwerfen, implementieren, überwachen und optimieren sie Datenplattformen, um die Anforderungen der Datenpipelines zu erfüllen.
+  
+  Ein Kandidat für diese Prüfung muss über gute Kenntnisse von Datenverarbeitungssprachen wie SQL, Python oder Scala verfügen und parallele Verarbeitung und Datenarchitekturmuster verstehen.
 subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Entwerfen und Implementieren von Datenspeicherung; Datenverarbeitung entwerfen und entwickeln; Entwurf und Implementieren von Datensicherheitsmaßnahmen und Überwachung und Optimierung der Datenspeicherung und -verarbeitung.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4MbYT
