--- a/learn-certs-pr/exams/mb-300.yml
+++ b/learn-certs-pr/exams/mb-300.yml
@@ -6,9 +6,7 @@ metadata:
 uid: exam.mb-300
 displayName: MB-300
 summary: |-
-  <div>
-  <div><font color='red'><strong>Der Inhalt dieser Prüfung wurde am 16. Oktober 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich geändert hat.</strong></font><br/><br/></div>
-  </div>
+  <div><font color='red'><strong>Der Inhalt dieser Prüfung wird am 09. August 2021 aktualisiert. Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich ändern wird.</strong></font><br/><br/></div>
 
   Kandidaten für diese Prüfung sind funktionale Berater, die Geschäftsanforderungen analysieren und diese in vollständig realisierte Geschäftsprozesse und Lösungen umsetzen, die branchenspezifische Best Practices implementieren.
   <br/>
@@ -27,7 +25,7 @@ locales:
 levels:
 - intermediate
 skills:
-- Der Inhalt dieser Prüfung wurde am 16. Oktober 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungsfertigkeiten herunter, um zu sehen, was sich geändert hat.
+- Der Inhalt dieser Prüfung wird am 9. August 2021 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich ändern wird.
 - Verwenden Sie gängige Tools zur Funktionalität und Implementierung (15-20%).
 - Konfigurieren Sie Sicherheit, Prozesse und Optionen (30-35%)
 - Verwalten von Finanz- und Betriebsdaten (25-30%)
@@ -52,7 +50,7 @@ paths:
 - uid: learn-dynamics.migrate-data-go-live-with-dynamics-365-finance-ops
 - uid: learn-dynamics.configure-analytics-reporting-finance-operations
 relatedCertifications:
-- related:	  
+- related:
     uid: certification.d365-functional-consultant-manufacturing
 - related:
     uid: certification.d365-functional-consultant-commerce
