--- a/learn-certs-pr/exams/mb-330.yml
+++ b/learn-certs-pr/exams/mb-330.yml
@@ -6,30 +6,31 @@ metadata:
 uid: exam.mb-330
 displayName: MB-330
 summary: |-
-  <div><font color='red'><strong>Der Inhalt dieser Prüfung wird am 26. Juli 2021 aktualisiert. Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich ändert.</strong></font><br/><br/></div>
+  <div><font color='red'><strong>Der Inhalt dieser Prüfung wurde am 26. Juli 2021 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.</strong></font><br/><br/></div>
 
   Kandidaten für diese Prüfung sind funktionale Berater, die Geschäftsanforderungen analysieren und diese in vollständig realisierte Geschäftsprozesse und Lösungen umsetzen, die branchenspezifische Best Practices implementieren. Kandidaten dienen als Schlüsselressource bei der Implementierung und Konfiguration von Anwendungen zur Erfüllung der Geschäftsanforderungen.
   <br/>
 
-  Kandidaten für diese Prüfung verfügen über ein grundlegendes Verständnis der Buchhaltungsgrundsätze und der finanziellen Abläufe von Unternehmen, Kundenservice, Außendienst, Fertigung, Einzelhandel und Lieferkettenmanagement. Kandidaten für diese Prüfung sind in der Regel auf einen oder mehrere Funktionssätze von Finanz- und Betriebsanwendungen spezialisiert, darunter Finanzen, Fertigung und Lieferkettenmanagement.
+  Kandidaten für diese Prüfung verfügen über ein grundlegendes Verständnis der Buchhaltungsgrundsätze und der finanziellen Abläufe von Unternehmen, Kundenservice, Außendienst, Fertigung, Einzelhandel und Lieferkettenmanagement. Sie spezialisieren sich in der Regel auf eine oder mehrere Funktionsgruppen von Finanz- und Betriebsanwendungen, einschließlich Finanzen, Fertigung und Lieferkettenmanagement.
 
   Die Kandidaten müssen über Grundkenntnisse in den Praktiken des Lieferantenmanagements verfügen, einschließlich Beschaffung, Handel, Logistik, Lagerverwaltung und Transportmanagement.
-subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Implementierung des Produktinformationsmanagements; Bestandsverwaltung implementieren; Implementierung und Verwaltung von Lieferkettenprozessen; Lager- und Transportmanagement implementieren; und Masterplanung implementieren.'
+subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu bewältigen: Implementierung von Produktinformationsmanagement, Implementierung von Bestandsmanagement, Implementierung und Verwaltung von Lieferkettenprozessen, Implementierung von Lager- und Transportmanagement und Implementierung von Planungsoptimierung.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VwVt
 practiceTestUrl: https://in.mindhub.com/mb-330-microsoft-dynamics-365-supply-chain-microsoft-official-practice-test/p/MU-MB-330?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
 scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=MB-330&examname=Exam%20MB-330:%20Microsoft%20Dynamics%20365%20for%20Finance%20and%20Operations,%20Supply%20Chain%20Management&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-330
 locales:
 - en
+- ja
 levels:
 - intermediate
 skills:
-- Der Inhalt dieser Prüfung wird am 26. Juli 2021 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich ändert.
-- Implementieren des Produktinformationsmanagements (20-25%)
-- Implementieren der Bestandsführung (15-20%)
-- Implementieren und Verwalten von Lieferkettenprozessen (15-20%)
-- Implementieren von Lagerverwaltung und Transportmanagement und Durchführung von Geschäftsprozessen (20-25%)
-- Masterplanung durchführen (15-20%)
+- Der Inhalt dieser Prüfung wurde am 26. Juli 2021 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich geändert hat.
+- Implementieren des Produktinformationsmanagements (25-30 %)
+- Bestandsmanagement implementieren (15-20 %)
+- Implementieren und verwalten von Supply-Chain-Prozessen (15-20 %)
+- Implementieren der Lagerverwaltung und des Transportmanagements (20-25 %)
+- Planungsoptimierung implementieren (15-20 %)
 roles:
 - functional-consultant
 products:
