--- a/learn-certs-pr/exams/ms-740.yml
+++ b/learn-certs-pr/exams/ms-740.yml
@@ -10,10 +10,11 @@ summary: |-
   
   Kandidaten sollten über umfangreiche Erfahrungen im Bereich vereinheitlichte Kommunikation und praktische Erfahrungen mit Microsoft Teams verfügen. Darüber hinaus sollten Kandidaten über Netzwerkkenntnisse in Bezug auf Azure-Grundlagen, Telefonie, PowerShell, Datenspeichertechnologien, APIs, App-Sicherheit, Authentifizierung und Autorisierung, Sicherheits- und Compliance-Informationen, Debugging, Leistungsoptimierung und Überwachung verfügen.
   
-  <div><br/><br/><font color='red'><strong>Hinweis: Der Lernpfad für diese Prüfung wird am 30. Juni 2021 zur Verfügung stehen, und die Prüfung wird am 8. Juli 2021 zur Verfügung stehen.</strong></font></div>
-subTitle: 'Diese Prüfung wird am oder um den 8. Juli 2021 verfügbar sein. Diese Prüfung misst Ihre Fähigkeit zur Fehlerbehebung bei folgenden technischen Aufgaben: Microsoft Teams Sprachprobleme; Microsoft Teams -Meetings und Live-Events; Föderationsprobleme; Anmeldung bei Microsoft Teams; Teams und Channels; und Dateien.'
+  <div><br/><font color='red'><strong>Beta-Prüfungen werden nicht sofort bewertet, da wir Daten über die Qualität der Fragen und der Prüfung sammeln. <a href="/learn/certifications/certification-exams#participating-in-beta-exams">Erfahren Sie mehr über den Wert und die Bedeutung von Beta-Prüfungen.</a></strong></font></div>
+subTitle: 'Juli 2021 verfügbar sein. Diese Prüfung misst Ihre Fähigkeit zur Fehlerbehebung bei folgenden technischen Aufgaben: Microsoft Teams Sprachprobleme; Microsoft Teams -Meetings und Live-Events; Föderationsprobleme; Anmeldung bei Microsoft Teams; Teams und Channels; und Dateien.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4O2rS
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=MS-740&examname=Exam%20MS-740:%20Troubleshooting%20Microsoft%20Teams&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fms-740
 locales:
 - en
 levels:
