--- a/learn-certs-pr/exams/sc-300.yml
+++ b/learn-certs-pr/exams/sc-300.yml
@@ -20,7 +20,7 @@ locales:
 - zh-cn
 - ko
 levels:
-- advanced
+- intermediate
 skills:
 - Implementieren einer Identitätsmanagementlösung (25-30%)
 - Implementieren einer Authentifizierungs- und Zugriffsverwaltungslösung (25-30%)
