--- a/learn-certs-pr/exams/sc-900.yml
+++ b/learn-certs-pr/exams/sc-900.yml
@@ -6,7 +6,7 @@ metadata:
 uid: exam.sc-900
 displayName: SC-900
 summary: |-
-  <div><font color='red'><strong>Der Inhalt dieser Prüfung wird am 26. Juli 2021 aktualisiert. Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich ändert.</strong></font><br/><br/></div>
+  <div><font color='red'><strong>Der Inhalt dieser Prüfung wurde am 26. Juli 2021 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.</strong></font><br/><br/></div>
   
   Diese Prüfung richtet sich an Personen, die sich mit den Grundlagen von Sicherheit, Compliance und Identität (SCI) in Cloud-basierten und verwandten Microsoft-Services vertraut machen möchten.
   
@@ -28,19 +28,22 @@ locales:
 - ja
 - zh-cn
 - ko
-- nl
 - fr
 - es
 - pt-br
 - ru
 - ar-sa
+- id-id
+- de
+- zh-tw
+- it
 levels:
 - beginner
 skills:
-- Der Inhalt dieser Prüfung wird am 26. Juli 2021 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich ändert.
-- Konzepte zu Sicherheit, Compliance und Identität beschreiben (5-10%)
-- Die Funktionen von Microsoft Identitäts- and Management-Lösungen für den Zugang beschreiben (25-30%)
-- Die Funktionen von Microsoft-Sicherheitslösungen beschreiben (30-35%)
+- Der Inhalt dieser Prüfung wurde am 26. Juli 2021 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich geändert hat.
+- Konzepte zu Sicherheit, Compliance und Identität beschreiben (10-15%)
+- Die Funktionen von Microsoft Identitäts- and Management-Lösungen für den Zugang beschreiben (30-35%)
+- Die Funktionen von Microsoft-Sicherheitslösungen beschreiben (35-40%)
 - Die Funktionen von Microsoft-Compliance-Lösungen beschreiben (25-30%)
 roles:
 - business-user
