--- a/learn-certs-pr/identity-and-access-administrator/index.yml
+++ b/learn-certs-pr/identity-and-access-administrator/index.yml
@@ -11,7 +11,7 @@ summary: |-
   Der Identitäts- und Zugriffsadministrator kann eine einzelne Person oder ein Mitglied eines größeren Teams sein. Diese Rolle arbeitet mit vielen anderen Rollen im Unternehmen zusammen, um strategische Identitätsprojekte zur Modernisierung von Identitätslösungen, zur Implementierung hybrider Identitätslösungen und zur Implementierung von Identitäts-Governance voranzutreiben.
 subTitle: Der Microsoft Identitäts- und Zugriffs-Administrator entwirft, implementiert und betreibt die Identitäts- und Zugriffsverwaltungssysteme eines Unternehmens mit Hilfe von Azure AD. Er verwaltet Aufgaben wie z. B. die Bereitstellung einer sicheren Authentifizierung und den autorisierten Zugriff auf Unternehmensanwendungen.
 levels:
-- advanced
+- intermediate
 skills:
 - Implementieren einer Identitätsmanagementlösung
 - Implementieren einer Authentifizierungs- und Zugriffsverwaltungslösung
