--- a/learn-certs-pr/m365-teams-administrator-associate/index.yml
+++ b/learn-certs-pr/m365-teams-administrator-associate/index.yml
@@ -2,20 +2,22 @@
 title: 'Microsoft 365 Certified: Teams Administrator Associate'
 metadata:
   title: 'Microsoft 365 Certified: Teams Administrator Associate'
-  description: Der Microsoft Teams Administrator konfiguriert, implementiert und verwaltet Office 365-Workloads für Microsoft Teams, die effizient und effektiv zusammenarbeiten und in einer Unternehmensumgebung kommunizieren.
+  description: Kandidaten für diese Prüfung sind Microsoft Teams-Administratoren, die Microsoft Teams verwalten, um eine effiziente und effektive Zusammenarbeit und Kommunikation in einer Microsoft 365-Umgebung zu ermöglichen.
 uid: certification.m365-teams-administrator-associate
+certificationRenewalUid: renewal.m365-teams-administrator-associate
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: |-
-  Der Microsoft Teams Administrator konfiguriert, implementiert und verwaltet Office 365-Workloads für Microsoft Teams, die effizient und effektiv zusammenarbeiten und in einer Unternehmensumgebung kommunizieren.
-
-  Microsoft Teams Administratoren müssen in der Lage sein, Teams zu planen, bereitzustellen und zu verwalten. Chat, Apps, Kanäle, Besprechungen und Konferenzen, Live-Events und Anrufe.
-subTitle: Der Microsoft Teams Administrator konfiguriert, implementiert und verwaltet Office 365-Workloads für Microsoft Teams, die effizient und effektiv zusammenarbeiten und in einer Unternehmensumgebung kommunizieren.
+  Kandidaten für diese Prüfung sind Microsoft Teams-Administratoren, die Microsoft Teams verwalten, um eine effiziente und effektive Zusammenarbeit und Kommunikation in einer Microsoft 365-Umgebung zu ermöglichen.
+  
+  Kandidaten für diese Prüfung müssen in der Lage sein, Teams-Chat, -Apps, -Kanäle, -Besprechungen, -Audio-/Videokonferenzen, -Live-Events, -Anrufe und Microsoft Teams-zertifizierte Geräte zu planen, bereitzustellen, zu konfigurieren und zu sichern.
+subTitle: Kandidaten für diese Prüfung sind Microsoft Teams-Administratoren, die Microsoft Teams verwalten, um eine effiziente und effektive Zusammenarbeit und Kommunikation in einer Microsoft 365-Umgebung zu ermöglichen.
 levels:
 - intermediate
 skills:
-- Planen und Konfigurieren einer Microsoft-Teamumgebung
-- Verwalten von Chats, Anrufen und Meetings
-- Verwalten von Team- und App-Richtlinien
+- Planen und Konfigurieren einer Microsoft-Teamumgebung 
+- Verwalten von Chats, Teams, Channels und Apps 
+- Verwalten von Anrufen und Meetings 
+- Überwachen und Beheben von Problemen in einer Microsoft Teams-Umgebung 
 roles:
 - administrator
 type: role-based
