--- a/learn-certs-pr/power-platform-app-maker/index.yml
+++ b/learn-certs-pr/power-platform-app-maker/index.yml
@@ -23,10 +23,9 @@ subTitle: Der App-Maker erstellt Lösungen zur Vereinfachung, Automatisierung un
 levels:
 - intermediate
 skills:
-- Lösungen entwerfen
+- Entwerfen von Geschäftslösungen
 - Lösungen erstellen
 - Daten analysieren und visualisieren
-- Lösungen implementieren und verwalten
 roles:
 - business-analyst
 - business-owner
