--- a/learn-certs-pr/security-compliance-and-identity-fundamentals/index.yml
+++ b/learn-certs-pr/security-compliance-and-identity-fundamentals/index.yml
@@ -6,6 +6,8 @@ metadata:
 uid: certification.security-compliance-and-identity-fundamentals
 iconUrl: /media/learn/certification/badges/microsoft-certified-fundamentals-badge.svg
 summary: |-
+  <div><font color="red"><strong>Der Inhalt dieser Zertifizierung wurde am 26. Juli 2021 aktualisiert. Bitte laden Sie das Dokument zur Kompetenzmessung herunter, um zu sehen, was sich geändert hat.</strong></font><br/><br/></div>
+
   Diese Zertifizierung richtet sich an Personen, die sich mit den Grundlagen von Sicherheit, Compliance und Identität (SCI) in Cloud-basierten und verwandten Microsoft-Services vertraut machen möchten.
   
   Dies umfasst eine breite Zielgruppe, zu dem Geschäftsinteressenten, neue oder bestehende IT-Experten oder Studenten gehören können, die ein Interesse an Microsoft-Sicherheits-, Compliance- und Identitätslösungen haben.
