--- a/learn-certs-pr/azure-developer-legacy.yml
+++ b/learn-certs-pr/azure-developer-legacy.yml
@@ -3,7 +3,7 @@ title: 'Microsoft Certified: Azure Developer Associate (Historisch)'
 metadata:
   title: 'Microsoft Certified: Azure Developer Associate (Historisch)'
   description: 'Azure-Entwickler entwerfen, erstellen, testen und warten Cloud-Anwendungen und -Services.'
-uid: certification.azure-developer-legacy
+uid: certification.azure-developer-erlr
 certificationRenewalUid: renewal.azure-developer
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: |-
