--- a/learn-certs-pr/azure-virtual-desktop-specialty/index.yml
+++ b/learn-certs-pr/azure-virtual-desktop-specialty/index.yml
@@ -53,6 +53,8 @@ courses:
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4MFTM
 exams:
 - uid: exam.az-140
+paths:
+- uid: learn-m365.windows-virtual-desktop
 resources:
 - title: Azure-Zertifizierungsplakat
   description: Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Azure an.
