--- a/learn-certs-pr/courses/ms-700t00.yml
+++ b/learn-certs-pr/courses/ms-700t00.yml
@@ -12,7 +12,7 @@ skillsGained:
 - skill: Wie man Governance, Sicherheit und Konformität für Microsoft Teams implementiert
 - skill: Wie Sie eine Unternehmensumgebung für eine Microsoft Teams-Bereitstellung vorbereiten
 - skill: Wie man Teams einsetzt und verwaltet
-- skill: Möglichkeiten zur Verwaltung der Zusammenarbeit in Microsoft Teams
+- skill: Wie Sie die Zusammenarbeit und Kommunikation in Microsoft Teams verwalten
 - skill: Techniken zur Verwaltung und Fehlerbehebung bei der Kommunikation in Microsoft Teams
 learningPartnersLink: /learn/certifications/partners
 locales:
@@ -23,104 +23,129 @@ roles:
 - administrator
 products:
 - m365
-- azure-active-directory
-- office-365
 exams:
 - uid: exam.ms-700
 summary: |-
-  Der Kurs Managing Microsoft Teams richtet sich an Personen, die die Rolle des Microsoft 365 Teams Admin anstreben.
-  Der Microsoft Teams Administrator konfiguriert, implementiert und verwaltet Office 365-Workloads für Microsoft Teams, die effizient und effektiv zusammenarbeiten und in einer Unternehmensumgebung kommunizieren.
-  Dieser Kurs umfasst sechs zentrale Elemente - Überblick über Microsoft Teams, Implementierung von Governance, Sicherheit und Konformität für Microsoft Teams, Vorbereitung der Umgebung für eine Microsoft Teams-Bereitstellung, Bereitstellung und Verwaltung von Teams, Verwaltung der Zusammenarbeit und Verwaltung der Kommunikation in Microsoft Teams.
-  In Microsoft Teams-Übersicht erhalten Sie einen Überblick über Microsoft Teams, einschließlich der Teams-Architektur und der damit verbundenen Office 365-Arbeitslasten. Sie erhalten einen Überblick über die Sicherheit und Konformität in Microsoft Teams und schließlich einen Überblick über die Verwaltung von Microsoft Teams.
-  Bei der Implementierung von Governance, Sicherheit und Konformität für Microsoft Teams planen und konfigurieren Sie die Governance für Office 365-Gruppen, einschließlich Ablauf- und Namensrichtlinien. Anschließend implementieren Sie die Sicherheit durch die Konfiguration von Zugriffsbeschränkungen, MFA oder Threat Management für Microsoft Teams. Schließlich implementieren Sie die Konformität für Teams, indem Sie DLP-Richtlinien, eDiscovery-Fälle oder Überwachungsrichtlinien verwenden.
-  Bei der Vorbereitung der Umgebung für eine MicrosoftTeams-Bereitstellung planen Sie ein Upgrade von Skype für Unternehmen auf Microsoft-Teams, indem Sie Upgrade-Pfade mit Koexistenz- und Upgrade-Modi evaluieren, Migrationen von Meetings verwalten und Koexistenz- und Upgrade-Einstellungen konfigurieren. Dann planen und konfigurieren Sie die Netzwerkeinstellungen für Microsoft Teams, und schließlich werden Sie die Endgeräte von Microsoft Teams bereitstellen und verwalten.
-  Bei der Bereitstellung und Verwaltung von Teams lernen Sie, wie Sie Teams erstellen und verwalten, die Mitgliedschaft und den Zugriff für interne und externe Benutzer verwalten.
-  Bei der Verwaltung der Zusammenarbeit in Microsoft-Teams verwalten Sie Chat- und Kooperationserfahrungen wie z.B. Team-Einstellungen oder Richtlinien zur Erstellung privater Kanäle. Schließlich verwalten Sie Einstellungen für Team-Anwendungen wie Richtlinien für die Einrichtung von Anwendungen, Apps, Bots und Konnektoren in Microsoft Teams oder veröffentlichen eine benutzerdefinierte Anwendung in Microsoft Teams.
-  Dieser Kurs schließt mit der Verwaltung der Kommunikation in Microsoft Teams ab. Sie lernen, wie Sie Live-Veranstaltungen und Besprechungen verwalten, Telefonnummern oder die Telefonanlage für Microsoft Teams verwalten und schließlich, wie Sie Audio-, Video- und Kundenprobleme beheben können.
+  In diesem Kurs lernen Sie verschiedene Teams-Verwaltungstools, Sicherheits- und Compliance-Funktionen für Teams, Netzwerkanforderungen für die Bereitstellung von Teams sowie verschiedene Teams-Einstellungen und Richtlinien für die Verwaltung der Zusammenarbeit und Kommunikation in Teams kennen. Hier werden Sie die Architektur von Teams kennenlernen. Insbesondere werden Sie die Integration zwischen Microsoft Teams und verschiedenen Workloads und Services in Microsoft 365 kennenlernen. Sie lernen die Sicherheits- und Compliance-Funktionen für Teams kennen, einschließlich Zugriffskontrolle, MFA, Bedrohungen, Warnungen, DLP-Richtlinien, eDiscovery und Richtlinien zur Informationssperre. Sie erfahren auch, wie Sie die Umgebung für eine Microsoft Teams-Bereitstellung vorbereiten, einschließlich der Aktualisierung von Skype for Business zu Microsoft Teams, der Netzwerkeinstellungen und der Verwaltung von Microsoft Teams-Endpunkten. Schließlich lernen Sie, wie man Teams erstellt und verwaltet, die Mitgliedschaft verwaltet, einschließlich interner und externer Benutzer. Außerdem lernen Sie verschiedene Einstellungen und Richtlinien kennen, um die Zusammenarbeit und Kommunikation in Microsoft Teams zu verwalten.
 
   #### Zielgruppenprofil
-  Die Teilnehmer dieses Kurses sind an Microsoft Teams oder am Bestehen der Zertifizierungsprüfung zum Microsoft Teams Administrator Associate interessiert.
+
+  Die Teilnehmer dieses Kurses sind an Microsoft Teams oder am Bestehen der Zertifizierungsprüfung zum Microsoft Teams Administrator Associate interessiert. Ein Microsoft Teams-Administrator plant, implementiert, konfiguriert und verwaltet Microsoft Teams, um sich auf eine effiziente und effektive Zusammenarbeit und Kommunikation in einer Microsoft 365-Umgebung zu konzentrieren. Ein Microsoft Teams-Administrator muss in der Lage sein, Teams, Chats, Apps, Kanäle, Meetings, Audio-/Videokonferenzen, Live-Events, Anrufe und für Teams zertifizierte Geräte zu planen, bereitzustellen und zu verwalten. Ein Microsoft Teams-Administrator hat Erfahrung in der Integration von Microsoft Teams mit SharePoint, OneDrive, Exchange, Microsoft 365 Groups und anderen Microsoft-, Drittanbieter- und benutzerdefinierten Anwendungen. Ein Microsoft Teams-Administrator versteht andere Arbeitslasten und Rollen, wie Netzwerk, Sprache, Identität, Zugriff, Geräte, Lizenzierung, Sicherheit, Compliance, Informationsmanagement und Benutzerakzeptanz, und arbeitet mit ihnen zusammen.
 prerequisitesSection: |-
   - Ein fundiertes Verständnis von grundlegenden Funktionserfahrungen mit Microsoft 365-Diensten.
   - Ein kompetentes Verständnis der allgemeinen IT-Praktiken, einschließlich der Verwendung von PowerShell.
 outlineSection: |-
-  ### Modul 1&#58; Übersicht über Microsoft Teams
-  In Microsoft Teams-Übersicht erhalten Sie einen Überblick über Microsoft Teams, einschließlich der Teams-Architektur und der damit verbundenen Office 365-Arbeitslasten. Sie erhalten einen Überblick über die Sicherheit und Konformität in Microsoft Teams und schließlich einen Überblick über die Verwaltung von Microsoft Teams.
+  ### Modul 1: Erste Schritte bei der Verwaltung von Microsoft Teams
+
+  In diesem Modul erhalten Sie einen Überblick über Microsoft Teams, einschließlich der Teams-Architektur und der damit verbundenen Microsoft 365-Workloads. Außerdem lernen Sie die Verwaltungstools für Teams kennen und erfahren, wie Sie den Lebenszyklus von Teams steuern und verwalten können.
+
   #### Lektionen
-  - Übersicht der Microsoft-Teams
-  - Überblick über Sicherheit und Konformität in Microsoft-Teams
-  - Überblick über die Verwaltung von Microsoft-Teams
+
+  *   Lernen Sie Microsoft Teams kennen
+
+  *   Bereitstellen und Verwalten von Microsoft Teams
+
+  *   Implementieren von Governance und Lebenszyklusmanagement für Microsoft Teams
 
 
-  #### Labor &#58; Rollen verwalten und Teams erstellen
-  - Teamrollen und Lizenzen vorbereiten
-  - Neues Team erstellen
+  #### Lab: Verwalten von Microsoft Teams
 
+  ####
+  *   Teamrollen und Lizenzen vorbereiten
+  *   Teams-Verwaltungstools erkunden
+  *   Gruppen und Teams erstellen
+  *   Implementieren von Governance und Lebenszyklusmanagement für Microsoft Teams
 
-  ### Modul 2&#58; Implementierung von Microsoft Teams Governance, Sicherheit und Konformität
-  Bei der Implementierung von Governance, Sicherheit und Konformität für Microsoft Teams planen und konfigurieren Sie die Governance für Office 365-Gruppen, einschließlich Ablauf- und Namensrichtlinien. Anschließend implementieren Sie die Sicherheit durch die Konfiguration von Zugriffsbeschränkungen, MFA oder Threat Management für Microsoft Teams. Schließlich implementieren Sie die Konformität für Teams, indem Sie DLP-Richtlinien, eDiscovery-Fälle oder Überwachungsrichtlinien verwenden.
+  ### Modul 2: Implementierung von Sicherheit und Compliance für Microsoft Teams
+
+  In diesem Modul lernen Sie, wie Sie den Zugriff von externen Benutzern aus verschiedenen Verwaltungszentren in Microsoft 365 verwalten können und welche Sicherheits- und Compliance-Funktionen zum Schutz der Teams-Umgebung erforderlich sind, einschließlich bedingter Zugriff, MFA, Threat Management für Microsoft Teams, DLP-Richtlinien, eDiscovery-Fälle und Kommunikations-Compliance.
+
   #### Lektionen
-  - Implementierung von Governance und Lebenszyklus-Management für Microsoft Teams
-  - Implementierung von Sicherheit für Microsoft Teams
-  - Implementierung von Compliance für Microsoft Teams
+
+  *   Zugriff für externe Benutzer verwalten
+
+  *   Sicherheit für Microsoft Teams implementieren
+
+  *   Compliance für Microsoft Teams implementieren
 
 
-  #### Labor &#58; Sicherheit und Konformität für Teams und Inhalte konfigurieren
-  - Implementierung von Governance und Lebenszyklus-Management für Microsoft Teams
-  - Implementierung von Sicherheit für Microsoft Teams
-  - Implementierung von Compliance für Microsoft Teams
+  #### Lab: Konfigurieren von Sicherheit und Compliance für Microsoft Teams
 
+  ####
+  *   Verwalten des Gastzugangs für Microsoft Teams
+  *   Sicherheit für Microsoft Teams implementieren
+  *   Compliance für Microsoft Teams implementieren
 
-  ### Modul 3&#58; Vorbereitung der Umgebung für eine Microsoft-Team-Bereitstellung
-  Bei der Vorbereitung der Umgebung für eine MicrosoftTeams-Bereitstellung planen Sie ein Upgrade von Skype für Unternehmen auf Microsoft-Teams, indem Sie Upgrade-Pfade mit Koexistenz- und Upgrade-Modi evaluieren, Migrationen von Meetings verwalten und Koexistenz- und Upgrade-Einstellungen konfigurieren. Dann planen und konfigurieren Sie die Netzwerkeinstellungen für Microsoft Teams, und schließlich werden Sie die Endgeräte von Microsoft Teams bereitstellen und verwalten.
+  ### Modul 3: Vorbereiten der Umgebung für eine Microsoft Teams-Bereitstellung
+
+  In diesem Modul lernen Sie die verschiedenen Aktualisierungs-Pfade für Koexistenz und Aktualisierungs-Modi für den Übergang von Skype for Business zu Microsoft Teams kennen. Außerdem lernen Sie, wie Sie Netzwerkeinstellungen für Microsoft Teams planen und konfigurieren.
+
   #### Lektionen
-  - Upgrade von Skype für Unternehmen auf Microsoft-Teams
-  - Planen und Konfigurieren von Netzwerkeinstellungen für Microsoft-Teams
-  - Bereitstellen und Verwalten von Microsoft-Team-Endpunkten
+
+  *   Übergang von Skype for Business zu Microsoft Teams
+
+  *   Planen und Konfigurieren von Netzwerkeinstellungen für Microsoft-Teams
 
 
-  #### Labor &#58; Umweltvorbereitung für Teams
-  - Netzwerkfähigkeiten berechnen
-  - Konfigurationsprofile auswerten
-  - Bereitstellung von Teamressourcen
+  #### Lab: Planen und Konfigurieren von Netzwerkeinstellungen für Microsoft-Teams
+
+  ####
+  *   Netzwerkfähigkeiten berechnen
 
 
-  ### Modul 4&#58; Teams einsetzen und verwalten
-  Bei der Bereitstellung und Verwaltung von Teams lernen Sie, wie Sie Teams erstellen und verwalten, die Mitgliedschaft und den Zugriff für interne und externe Benutzer verwalten.
+  ### Modul 4: Verwalten von Chat, Teams, Channels und Apps in Microsoft Teams
+
+  In diesem Modul lernen Sie, wie Sie Teams und Mitgliedschaften mit verschiedenen Ansätzen erstellen und verwalten, die Zusammenarbeit in Chats und Kanälen verwalten und Apps für Microsoft Teams verwalten.
+
   #### Lektionen
-  - Teams erstellen und verwalten
-  - Mitgliedschaft verwalten
-  - Zugriff für externe Benutzer verwalten
+
+  *   Erstellen und Verwalten von Teams
+
+  *   Verwalten der Zusammenarbeit in Chats und Kanälen
+
+  *   Verwalten von Apps für Microsoft Teams
 
 
-  #### Labor &#58; Teams verwalten
-  - Team-Ressourcen verwalten
-  - Gemeinsame Nutzung und Zugriff verwalten
+  #### Lab: Verwalten von Teams und Zusammenarbeitseinstellungen für Teams
 
+  ####
+  *   Team-Ressourcen verwalten
+  *   Kanal- und Messaging-Richtlinien konfigurieren
+  *   Verwalten von App-Einstellungen
+  *   Konfigurierte Richtlinieneinstellungen testen
 
-  ### Modul 5&#58; Verwalten der Zusammenarbeit in Microsoft Teams
-  Bei der Verwaltung der Zusammenarbeit in Microsoft-Teams verwalten Sie Chat- und Kooperationserfahrungen wie z.B. Team-Einstellungen oder Richtlinien zur Erstellung privater Kanäle. Schließlich verwalten Sie Einstellungen für Team-Anwendungen wie Richtlinien für die Einrichtung von Anwendungen, Apps, Bots und Konnektoren in Microsoft Teams oder veröffentlichen eine benutzerdefinierte Anwendung in Microsoft Teams.
+  ### Modul 5: Verwalten von Besprechungen und virtuellen Ereignissen in Microsoft Teams
+
+  In diesem Modul lernen Sie, wie Sie Besprechungen und virtuelle Veranstaltungen mit verschiedenen Richtlinien und Einstellungen verwalten können. Außerdem lernen Sie, wie Sie Teams-Geräte, einschließlich Teams Room, bereitstellen.
+
   #### Lektionen
-  - Verwalten von Chat- und Zusammenarbeitserfahrungen
-  - Einstellungen für Teams-Apps verwalten
+
+  *   Verwalten von Besprechungen und virtuellen Veranstaltungen
+
+  *   Konfigurieren und Verwalten von Microsoft Teams-Geräten
 
 
-  #### Labor &#58; Ändern Sie die Einstellungen zur Zusammenarbeit für Teams
-  - Konfigurieren von Kanal- und Nachrichtenrichtlinien
-  - Verwalten der App-Einstellungen für das Team
+  #### Lab: Verwalten von Teams-Besprechungserlebnissen
 
+  ####
+  *   Verwalten von Besprechungen und virtuellen Veranstaltungen
+  *   Teams-Geräteprofile bereitstellen
 
-  ### Modul 6&#58; Verwaltung der Kommunikation in Microsoft Teams
-  Dieser Kurs schließt mit der Verwaltung der Kommunikation in Microsoft Teams ab. Sie lernen, wie Sie Live-Veranstaltungen und Besprechungen verwalten, Telefonnummern oder die Telefonanlage für Microsoft Teams verwalten und schließlich, wie Sie Audio-, Video- und Kundenprobleme beheben können.
+  ### Modul 6: Verwalten von Anrufen in Microsoft Teams
+
+  In diesem Modul lernen Sie, wie Sie Telefonnummern und das Telefonsystem für Anrufe in Microsoft Teams verwalten und wie Sie Audio-, Video- und Client-Probleme beheben können.
+
   #### Lektionen
-  - Verwalten von Live-Veranstaltungen und Meetings
-  - Verwalten von Telefonnummern
-  - Telefonanlage für Microsoft-Teams verwalten
-  - Fehlerbehebung bei Audio-, Video- und Kundenproblemen
+
+  *   Verwalten von Telefonnummern
+
+  *   Telefonsystem für Microsoft Teams verwalten
+
+  *   Fehlerbehebung bei Audio-, Video- und Kundenproblemen
 
 
-  #### Labor &#58; Kommunikationseinstellungen für Teams ändern
-  - Konfigurieren von Besprechungsrichtlinien
-  - Telefonanlage für Microsoft-Teams verwalten
-  - Fehlerbehebung bei Audio-, Video- und Kundenproblemen
+  #### Lab: Verwalten von Anrufen in Microsoft Teams
 
+  ####
+  *   Anrufplan erstellen (optional)
+  *   Telefonsystem für Microsoft Teams verwalten
