--- a/learn-certs-pr/exams/az-600.yml
+++ b/learn-certs-pr/exams/az-600.yml
@@ -21,7 +21,7 @@ locales:
 - zh-cn
 - ko
 levels:
-- advanced
+- intermediate
 skills:
 - Erbringung von Serviceleistungen (30-35%)
 - Implementierung der Rechenzentrumsintegration (15-20%)
