--- a/learn-certs-pr/exams/mb-210.yml
+++ b/learn-certs-pr/exams/mb-210.yml
@@ -6,13 +6,13 @@ metadata:
 uid: exam.mb-210
 displayName: MB-210
 summary: |-
-  <div><font color="red"><strong>Der Inhalt dieser Prüfung wird am 23. Juli 2021 aktualisiert. Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich ändert.</strong></font><br/><br/></div>
+  <div><font color="red"><strong>Der Inhalt dieser Prüfung wurde am 23. Juli 2021 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.</strong></font><br/><br/></div>
   
-  Kandidaten für dieses examens sind Dynamics 365 Funktionsberater mit Vertriebserfahrung. Die Kandidaten sind für die Implementieren von Lösungen verantwortlich, die einen Vertriebslebenszyklus unterstützen, um effizient und effektiv zu arbeiten und Umsatzziele, Geschäftsstrategien und Unternehmensziele zu erreichen.
+  Kandidaten für diese Prüfung sind Dynamics 365 Funktionsberater mit Vertriebserfahrung. Kandidaten sind für die Implementierung von Lösungen verantwortlich, die den Vertriebslebenszyklus unterstützen, damit dieser effizient und effektiv abläuft und die Umsatzziele, Geschäftsstrategien und Unternehmensziele erfüllt werden können.
   
-  Kandidaten sind verantwortlich für die Konfiguration und Erweiterung der Kernfunktionalität von Leitfäden, Kontakten, Accounts, Gelegenheiten und unterstützenden Einrichtungen, um die im Unternehmen bestehenden Verkaufsprozesse abzubilden. Sie identifizieren Möglichkeiten, Power Apps zu nutzen, um einheitliche Erlebnisse für alle Geräte zu entwickeln, Power Automate für die Anwendungsintegration, Geschäftsprozessabläufe und andere Automatisierungstools, um eine Anwendung zu erstellen, die die Lead to cash journey. unterstützt und beschleunigt.
-  
-  Die Kandidaten müssen über fundierte betriebswirtschaftliche Kenntnisse und vorzugsweise über erste persönliche Erfahrungen in der Vertriebswelt in einer oder mehreren Vertriebsfunktionen verfügen.
+  Kandidaten sind verantwortlich für die Konfiguration und Erweiterung der Kernfunktionalität von Leitfäden, Kontakten, Accounts, Gelegenheiten und unterstützenden Einrichtungen, um die im Unternehmen bestehenden Verkaufsprozesse abzubilden. Sie identifizieren Möglichkeiten, Power Apps zu nutzen, um einheitliche Erlebnisse für alle Geräte zu entwickeln, Power Automate für die Anwendungsintegration, Geschäftsprozessabläufe und andere Automatisierungstools, um eine Anwendung zu erstellen, die die „Lead to cash“ journey unterstützt und beschleunigt.
+
+  Kandidaten müssen über fundierte Geschäftskenntnisse verfügen und sollten erste Erfahrungen in einer oder mehreren Vertriebsfunktionen gesammelt haben.
 subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erledigen: Konfiguration durchführen, Kernvertriebstabellen verwalten, zusätzliche Tools und Services konfigurieren.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VUjN
@@ -20,10 +20,11 @@ practiceTestUrl: https://www.mindhub.com/mb-210-microsoft-dynamics-365-sales-mic
 scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=MB-210&examname=Exam%20MB-210:%20Microsoft%20Dynamics%20365%20for%20Sales&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-210
 locales:
 - en
+- ja
 levels:
 - intermediate
 skills:
-- Der Inhalt dieser Prüfung wird am 23. Juli 2021 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich ändert.
+- Der Inhalt dieser Prüfung wurde am 23. Juli 2021 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich geändert hat.
 - Konfiguration durchführen (25-30%)
 - Verwalten von Kernvertriebsunternehmen (50-55%)
 - Konfigurieren von zusätzlichen Tools und Services (15-20%)
