--- a/learn-certs-pr/exams/ms-101.yml
+++ b/learn-certs-pr/exams/ms-101.yml
@@ -6,11 +6,11 @@ metadata:
 uid: exam.ms-101
 displayName: MS-101
 summary: |-
-  <div><font color='red'><strong>Der Inhalt dieser Prüfung wird am 29. Juli 2021 aktualisiert. Bitte laden Sie das unten stehende Dokument zu Kompetenzmessungen herunter, um zu sehen, was sich ändern wird.</strong></font><br/><br/></div>
+  <div><font color='red'><strong>Der Inhalt dieser Prüfung wurde am 29. Juli 2021 aktualisiert. Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich ändern wird.</strong></font><br/><br/></div>
   
   Kandidaten für diese Prüfung sind Microsoft 365 Enterprise Administratoren, die an der Bewertung, Planung, Migration, Bereitstellung und Verwaltung von Microsoft 365 Services mitwirken. Sie führen Verwaltungsaufgaben im Bereich der Microsoft 365 Mietverhältnisse für Unternehme durch, inkl. Identitäten, Sicherheit, Konformität und unterstützenden Technologien.
   
-  Kandidaten haben Erfahrung in der praktischen Nutzung von Microsoft 365 Workloads und sollten seit mindestens einem Jahr als Microsoft 365 Workload Administrator gearbeitet haben (Exchange, SharePoint, Skype for Business, oder Windows as a Service). Kandidaten sollten auch Erfahrung haben im Networking, Server Administration und IT Grundlagen wie DNS, Active Directory und PowerShell.
+  Kandidaten verfügen über Kenntnisse in Microsoft 365-Workloads und sollten mindestens als Administrator für die Bereitstellung von Exchange, SharePoint, Teams und Windows 10 tätig gewesen sein. Kandidaten sollten auch Erfahrung im Networking, Server Administration und IT Grundlagen wie DNS, Acrive Directory und PowerShell haben.
 subTitle: 'dieses examens misst Ihre Kompetenz, folgende technische Aufgaben zu erfüllen: Implementierung moderner Gerätedienste; Implementierung von Microsoft 365 Sicherheits- und Bedrohungsmanagement; und Management von Microsoft 365 Governance und Konformität.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VEHZ
@@ -22,7 +22,7 @@ locales:
 levels:
 - advanced
 skills:
-- Der Inhalt dieser Prüfung wird am 29. Juli 2021 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich ändert.
+- Der Inhalt dieser Prüfung wurde am 29. Juli 2021 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich ändert.
 - Implementieren moderner Geräteservices (40-45%)
 - Microsoft 365 Sicherheits- und Bedrohungsmanagement implementieren (20-25%)
 - Microsoft 365-Governance und -Konformität verwalten (35-40%)
