--- a/learn-certs-pr/exams/ms-500.yml
+++ b/learn-certs-pr/exams/ms-500.yml
@@ -6,7 +6,7 @@ metadata:
 uid: exam.ms-500
 displayName: MS-500
 summary: |-
-  <div><font color='red'><strong>Der Inhalt dieser Prüfung wird am 26. Juli 2021 aktualisiert. Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich ändert.</strong></font><br/><br/></div>
+  <div><font color='red'><strong>Der Inhalt dieser Prüfung wurde am 26. Juli 2021 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.</strong></font><br/><br/></div>
 
   Kandidaten für diese Prüfung implementieren, verwalten und überwachen Sicherheits- und Compliancelösungen für Microsoft 365 und hybride Umgebungen. Der Microsoft 365 Sicherheits-Administrator sichert proaktiv Microsoft 365 Unternehmensumgebungen, reagiert auf Bedrohung-en, führt Investigationen durch und gewährleistet Datensicherheit. Der Microsoft 365 Security Administrator arbeitet mit einem Microsoft 365 Enterprise Administrator den Geschäftsteilhabern und anderen Workload Administratoren für Planung und Implementierung von Sicherheitsstrategien zur Gewährleistung zusammen, dass die Lösungen mit den Richtlinien und Bestimmungen der Organisation übereinstimmen.
   <br/>
@@ -27,7 +27,7 @@ locales:
 levels:
 - intermediate
 skills:
-- Der Inhalt dieser Prüfung wird am 26. Juli 2021 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich ändert.
+- Der Inhalt dieser Prüfung wurde am 26. Juli 2021 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich geändert hat.
 - Implementierung und Verwaltung von Identität und Zugriff (30-35%)
 - Implementierung und Verwaltung des Bedrohungsschutzes (20-25%)
 - Implementierung und Verwaltung des Informationsschutzes (15-20%)
