--- a/learn-certs-pr/exams/ms-600.yml
+++ b/learn-certs-pr/exams/ms-600.yml
@@ -6,13 +6,13 @@ metadata:
 uid: exam.ms-600
 displayName: MS-600
 summary: |-
-  <div><font color='red'><strong>Der Inhalt dieser Prüfung wird am 26. Juli 2021 aktualisiert. Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich ändert.</strong></font><br/><br/></div>
+  <div><font color='red'><strong>Der Inhalt dieser Prüfung wurde am 26. Juli 2021 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.</strong></font><br/><br/></div>
   
   Kandidaten für diese Prüfung sind Microsoft 365 Developers, die Anwendungen und Lösungen entwerfen, erstellen, testen und warten, die für die Produktivitäts- und Kollaborationsanforderungen von Unternehmen optimiert sind, die die Microsoft 365-Plattform nutzen.
   
-  Kandidaten für diese Prüfung beherrschen Microsoft Identity und Microsoft Graph. Sie verfügen über allgemeine Kenntnisse zu UI-Elementen (einschließlich Adaptive Cards und Office UI Fabric (Fluent UI)), Integrationspunkten (einschließlich Microsoft Teams, Office-Add-Ins, SharePoint Framework, umsetzbare Nachrichten) und zum Bestimmen von Workload-Plattformzielen.
+  Kandidaten für diese Prüfung verfügen über Kenntnisse in Microsoft Identity und Microsoft Graph. Sie verfügen über allgemeine Kenntnisse über UI-Elemente (einschließlich Adaptive Cards und Fluent UI (Office UI Fabric)), Integrationspunkte (einschließlich Microsoft Teams-Apps, Office Add-ins, SharePoint Framework, Actionable Messages) und die Bestimmung von Workload-Plattformzielen.
   
-  Die Kandidaten sollten über Erfahrungen in der Entwicklung von Lösungen auf Microsoft Teams, Office Add-Ins oder SharePoint Framework in allen Phasen der Softwareentwicklung verfügen. Sie sollten über ein grundlegendes Verständnis von REST-APIs, JSON, OAuth2, OData, OpenID Connect, Microsoft identities (Microsoft-Identitäten) (einschließlich Azure AD- und Microsoft-accounts (Konten)), Azure AD B2C und Berechtigungs- und Genehmigungskonzepten verfügen.
+  Kandidaten sollten Erfahrung in der Entwicklung von Lösungen für Microsoft Teams, Office oder SharePoint in allen Phasen der Softwareentwicklung haben. Sie sollten über ein grundlegendes Verständnis von REST-APIs, JSON, OAuth2, OData, OpenID Connect, Microsoft identities (Microsoft-Identitäten) (einschließlich Azure AD- und Microsoft accounts, Azure AD B2C und Berechtigungs- und Genehmigungskonzepten verfügen.
 subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Microsoft-Identity implementieren, Anwendungen mit Microsoft Graph erstellen, SharePoint erweitern und anpassen, Teams erweitern und Office erweitern.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE43CZn
@@ -27,7 +27,7 @@ locales:
 levels:
 - intermediate
 skills:
-- Der Inhalt dieser Prüfung wird am 26. Juli 2021 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich ändert.
+- Der Inhalt dieser Prüfung wurde am 26. Juli 2021 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich geändert hat.
 - Microsoft Identity einrichten (20-25%)
 - Erstellen Sie Apps mit Microsoft Graph (15-20%)
 - Erweitern und Anpassen von SharePoint (15-20%)
