--- a/learn-certs-pr/exams/ms-700.yml
+++ b/learn-certs-pr/exams/ms-700.yml
@@ -6,14 +6,14 @@ metadata:
 uid: exam.ms-700
 displayName: MS-700
 summary: |-
-  <div><font color='red'><strong>Der Inhalt dieser Prüfung wird am 26. Juli 2021 aktualisiert. Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich ändert.</strong></font><br/><br/></div>
+  <div><font color='red'><strong>Der Inhalt dieser Prüfung wurde am 26. Juli 2021 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.</strong></font><br/><br/></div>
   
-  Der Microsoft Teams Administrator konfiguriert, implementiert und verwaltet Office 365-Workloads für Microsoft Teams, die sich auf eine effiziente und effektive Zusammenarbeit und Kommunikation in einer Unternehmensumgebung konzentrieren.
+  Kandidaten für diese Prüfung sind Microsoft Teams-Administratoren, die Microsoft Teams verwalten, um eine effiziente und effektive Zusammenarbeit und Kommunikation in einer Microsoft 365-Umgebung zu ermöglichen.
   
-  Der Team administrator muss in der Lage sein, Team, Chats, Apps, Kanäle, Meetings, Audiokonferenzen, Live-Events und Anrufe zu planen, bereitzustellen und zu verwalten. Der Teamadministrator ist auch für das Upgrade von Skype für Unternehmen auf Teams verantwortlich. Kandidaten für diese Prüfung sollten über gute Kenntnisse in der Verwaltung von Teameinstellungen mit PowerShell verfügen.Der Teamadministrator verfügt über ein grundlegendes Verständnis für Integrationspunkte mit Anwendungen und Services, einschließlich, aber nicht beschränkt auf SharePoint, OneDrive for Business, Exchange, Azure AD und Office 365 Gruppen.Der Teamadministrator ist mit der Integration externer Anwendungen und Services vertraut.
+  Kandidaten für diese Prüfung müssen in der Lage sein, Teams-Chat, -Apps, -Kanäle, -Besprechungen, -Audio-/Videokonferenzen, -Live-Events, -Anrufe und Microsoft Teams-zertifizierte Geräte zu planen, bereitzustellen, zu konfigurieren und zu sichern. Kandidaten sollten Erfahrung mit der Integration von Microsoft Teams in andere Workloads haben, einschließlich SharePoint, OneDrive, Exchange, Microsoft 365 Groups, Power Platform und mit anderen Microsoft-Apps, Drittanbieter-Apps und benutzerdefinierten Apps.
   
-  Der Teams-Administrator arbeitet mit Telefonie-Technikern zusammen, um erweiterte Sprachfunktionen in Microsoft Teams zu integrieren. Diese Funktion ist nicht verantwortlich für die Konfiguration des direkten Routings, der Konfiguration des Call Routing oder der Integration der Telefonie. Der Teamadministrator kann mit anderen Workload-Administratorfunktionen arbeiten, einschließlich Sicherheit und Compliance, Messaging, Netzwerk, Identität und Geräte.
-subTitle: 'dieses examens misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Planen und Konfigurieren einer Microsoft-Team-Umgebung, Verwalten von Chat, Anrufen und Meetings sowie Verwalten von Teams und App-Richtlinien.'
+  Ein Microsoft Teams-Administrator arbeitet auch mit anderen Funktionen zusammen, wie Netzwerk, Telefonie, Lizenzierung, Sicherheit, Compliance, Benutzerakzeptanz, App-Entwicklung und Support.
+subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu bewältigen: Planen und Konfigurieren einer Microsoft Teams-Umgebung; Verwalten von Chats, Teams, Channels und Apps; Verwalten von Anrufen und Meetings; Überwachen und Beheben von Problemen in einer Microsoft Teams-Umgebung.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE43VcF
 practiceTestUrl: https://www.mindhub.com/p/MU-MS-700?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
@@ -27,10 +27,11 @@ locales:
 levels:
 - intermediate
 skills:
-- Der unten stehende Prüfungsleitfaden zeigt die Änderungen, die am 26. Juli 2021 implementiert werden.
-- Planen und Konfigurieren einer Microsoft-Teamumgebung (45-50%)
-- Verwalten von chats, Anrufen und meetings (30-35%)
-- Verwalten von Team- und App-Richtlinien (20-25%)
+- Der Inhalt dieser Prüfung wurde am 26. Juli 2021 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich geändert hat.
+- Planen und Konfigurieren einer Microsoft-Teamumgebung (35 -40%)
+- Verwalten von Chats, Teams, Channels und Apps (25-30%)
+- Verwalten von Anrufen und Meetings (15-20%)
+- Überwachen und Beheben von Problemen in einer Microsoft Teams-Umgebung (10-15%)
 roles:
 - administrator
 products:
