--- a/learn-certs-pr/exams/pl-100.yml
+++ b/learn-certs-pr/exams/pl-100.yml
@@ -6,16 +6,12 @@ metadata:
 uid: exam.pl-100
 displayName: PL-100
 summary: |-
-  <div><font color="red"><strong>Der Inhalt dieser Prüfung wird am 23. Juli 2021 aktualisiert. Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich ändert.</strong></font><br/><br/></div>
+  <div><font color="red"><strong>Der Inhalt dieser Prüfung wurde am 23. Juli 2021 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.</strong></font><br/><br/></div>
   
-  Der App-Hersteller erstellt Lösungen, um Aufgaben und Prozesse für sich und sein Team zu vereinfachen, zu automatisieren und zu transformieren, die alle über fundiertes Fachwissen im Lösungsbereich verfügen. Sie sind mit wichtigen technischen Business-Analyst-Aufgaben wie Datenmodellierung, grundlegendem UX-Design, Anforderungsanalyse, Prozessanalyse usw. vertraut.<br/><br/>
-
-  Der App-Hersteller erstellt und setzt Geschäftsprozesse durch, strukturiert eine digitale Sammlung von Informationen, verbessert die Effizienz wiederholbarer Aufgaben und automatisiert Geschäftsprozesse.
-
-  Der App-Hersteller verwendet die Hersteller-Tools der Power Plattform, um geschäftliche Probleme zu lösen. Sie haben möglicherweise Erfahrung mit Visual Basic for Applications, Excel-Pivot-Tabellen, Teams und anderen Tools. Sie sollten ein grundlegendes Verständnis von Datenmodellen, Benutzeroberfläche und Prozessen haben. Der App-Hersteller ist sich der Funktionen und Einschränkungen der verfügbaren Tools bewusst und weiß, wie diese angewendet werden.
-
-  Der App-Hersteller ist selbstgesteuert und lösungsorientiert. Sie verfügen möglicherweise nicht über eine formelle IT-Schulung, können jedoch mit Hilfe von Technologie Geschäftsprobleme mit einer persönlichen Wachstumsphilosophie lösen. Sie verstehen die betrieblichen Bedürfnisse und haben eine Vision des gewünschten Ergebnisses. Sie nähern sich Problemen mit schrittweisen und iterativen Strategien.
-subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erledigen: Lösungen entwerfen, Lösungen erstellen, Daten analysieren, Lösungen implementieren und verwalten.'
+  Der Kandidat entwirft Lösungen zur Vereinfachung und Automatisierung von Aufgaben und Prozessen für sich und sein Team. Sie verstehen die Daten, mit denen sie arbeiten, die Probleme, die sie lösen müssen, und die erforderlichen Prozesse und App-Erfahrungen. Der Kandidat verfügt möglicherweise nicht über eine formale IT-Ausbildung, ist aber in der Lage, Technologien zur Lösung von Geschäftsproblemen einzusetzen.
+  
+  Der Kandidat ist selbständig und lösungsorientiert. Er kann sich mit Funktionen von Apps wie Microsoft Teams, Microsoft 365 Apps und Diensten sowie Lösungen von Drittanbietern verbinden und diese nutzen. Der Kandidat hat den Wunsch, die Möglichkeiten und Grenzen der verfügbaren Tools zu verstehen und weiß, wie man sie einsetzt. Der Kandidat ist ein Befürworter von Power Platform-Lösungen.
+subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu bewältigen: Entwerfen von Geschäftslösungen; Erstellen von Lösungen; und Analysieren und Visualisieren von Daten.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4wo07
 practiceTestUrl: https://www.mindhub.com/p/MU-PL-100?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
@@ -26,14 +22,14 @@ providers:
   examUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=PL-100&provider=psi&examname=Exam%20PL-100:%20Microsoft%20Power%20Platform%20App%20Maker&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fpl-100
 locales:
 - en
+- ja
 levels:
 - intermediate
 skills:
-- Der Inhalt dieser Prüfung wird am 23. Juli 2021 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich ändert.
-- Lösungen entwerfen (10-15%)
-- Lösungen erstellen (50-55%)
-- Analysieren von Daten (5-10%)
-- Implementieren und Verwalten von Lösungen (15-20%)
+- Der Inhalt dieser Prüfung wurde am 23. Juli 2021 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich geändert hat.
+- Entwerfen von Geschäftslösungen (35-40%)
+- Lösungen erstellen. (45-50%)
+- Daten analysieren und visualisieren (15-20%)
 roles:
 - business-analyst
 - business-owner
@@ -93,7 +89,7 @@ relatedCertifications:
 resources:
 - title: Lernpfad zur Zertifizierung
   description: Empfohlene Schulungsressourcen, die Ihnen helfen, sich auf die erforderlichen Prüfungen vorzubereiten und Ihre Zertifizierung zu erhalten.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CfjG
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CkBF
 - title: Informieren Sie sich über die Zertifizierungen
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://aka.ms/TrainingCertDeck
