--- a/learn-certs-pr/exams/sc-200.yml
+++ b/learn-certs-pr/exams/sc-200.yml
@@ -6,7 +6,7 @@ metadata:
 uid: exam.sc-200
 displayName: SC-200
 summary: |-
-  <div><font color="red"><strong>Der Inhalt dieser Prüfung wird am 23. Juli 2021 aktualisiert. Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich ändert.</strong></font><br/><br/></div>
+  <div><font color="red"><strong>Der Inhalt dieser Prüfung wurde am 23. Juli 2021 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.</strong></font><br/><br/></div>
 
   Der Microsoft-Analyst für Sicherheitsoperationen arbeitet mit Interessenvertretern des Unternehmens zusammen, um Informationstechnologiesysteme für das Unternehmen zu sichern. Ihr Ziel ist es, das organisatorische Risiko zu reduzieren, indem aktive Angriffe in der Umgebung schnell behoben, Verbesserungen der Bedrohungsschutzpraktiken empfohlen und Verstöße gegen organisatorische Richtlinien an geeignete Interessenvertreter weitergeleitet werden.
   
@@ -21,10 +21,18 @@ locales:
 - ja
 - zh-cn
 - ko
+- fr
+- de
+- es
+- pt-br
+- ru
+- ar-sa
+- zh-tw
+- it
 levels:
 - intermediate
 skills:
-- Der Inhalt dieser Prüfung wird am 23. Juli 2021 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich ändert.
+- Der Inhalt dieser Prüfung wurde am 23. Juli 2021 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich geändert hat.
 - Minimieren von Bedrohungen mit Hilfe von Microsoft 365 Defender (25-30%)
 - Minimieren von Bedrohungen mit Hilfe von Azure Defender (25-30%)
 - Minimieren von Bedrohungen mit Hilfe von Azure Sentinel (40-45%)
