--- a/learn-certs-pr/exams/sc-400.yml
+++ b/learn-certs-pr/exams/sc-400.yml
@@ -6,7 +6,7 @@ metadata:
 uid: exam.sc-400
 displayName: SC-400
 summary: |-
-  <div><font color="red"><strong>Der Inhalt dieser Prüfung wird am 23. Juli 2021 aktualisiert. Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich ändert.</strong></font><br/><br/></div>
+  <div><font color="red"><strong>Der Inhalt dieser Prüfung wurde am 23. Juli 2021 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.</strong></font><br/><br/></div>
 
   Der Informationsschutz-Administrator plant und implementiert Kontrollen, die die Compliance-Anforderungen des Unternehmens erfüllen. Diese Person ist dafür verantwortlich, Anforderungen und Compliance-Kontrollen technisch umzusetzen. Sie helfen den Eigentümern der Organisationskontrolle, konform zu werden und zu bleiben.
   
@@ -20,10 +20,13 @@ pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4Mr8
 scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=SC-400&examname=Exam%20SC-400:%20Microsoft%20Information%20Protection%20Administrator&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fsc-400
 locales:
 - en
+- zh-cn
+- ja
+- ko
 levels:
 - intermediate
 skills:
-- Der Inhalt dieser Prüfung wird am 23. Juli 2021 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich ändert.
+- Der Inhalt dieser Prüfung wurde am 23. Juli 2021 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich geändert hat.
 - Informationsschutz implementieren (35-40%)
 - Implementieren der Verhinderung von Datenverlust (30-35%)
 - Implementieren von Informations-Governance (25-30%)
