--- a/learn-certs-pr/m365-teams-support-engineer-associate/index.yml
+++ b/learn-certs-pr/m365-teams-support-engineer-associate/index.yml
@@ -2,16 +2,14 @@
 title: 'Microsoft 365 Certified: Teams Support Engineer Associate'
 metadata:
   title: 'Microsoft 365 Certified: Teams Support Engineer Associate'
-  description: Diese Prüfung wird am oder um den 8. Juli 2021 verfügbar sein. Kandidaten für diese Prüfung sind Support-Techniker, die Microsoft Teams -Umgebungen unterstützen, Fehler in Bereitstellungen beheben, die Leistung optimieren, Telemetrie- und Protokolldaten sammeln und analysieren sowie  Teams -Umgebungen verwalten.
+  description: Kandidaten für diese Prüfung sind Support-Techniker, die Microsoft Teams -Umgebungen unterstützen, Fehler in Bereitstellungen beheben, die Leistung optimieren, Telemetrie- und Protokolldaten sammeln und analysieren sowie  Teams -Umgebungen verwalten.
 uid: certification.m365-teams-support-engineer-associate
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: |-
   Kandidaten für diese Prüfung sind Support-Techniker, die Microsoft Teams -Umgebungen unterstützen, Fehler in Bereitstellungen beheben, die Leistung optimieren, Telemetrie- und Protokolldaten sammeln und analysieren sowie  Teams -Umgebungen verwalten.
   
   Kandidaten sollten über umfangreiche Erfahrungen im Bereich vereinheitlichte Kommunikation und über praktische Erfahrungen mit Microsoft Teams verfügen. Darüber hinaus sollten Kandidaten über Netzwerkkenntnisse in Bezug auf Azure-Grundlagen, Telefonie, PowerShell, Datenspeichertechnologien, APIs, App-Sicherheit, Authentifizierung und Autorisierung, Sicherheits- und Compliance-Informationen, Debugging, Leistungsoptimierung und Überwachung verfügen.
-  
-  <div><br/><br/><font color='red'><strong>Hinweis: Der Lernpfad für diese Prüfung wird am 30. Juni 2021 zur Verfügung stehen, und die Prüfung wird am 8. Juli 2021 zur Verfügung stehen.</strong></font></div>
-subTitle: Diese Prüfung wird am oder um den 8. Juli 2021 verfügbar sein. Kandidaten für diese Prüfung sind Support-Techniker, die Microsoft Teams -Umgebungen unterstützen, Fehler in Bereitstellungen beheben, die Leistung optimieren, Telemetrie- und Protokolldaten sammeln und analysieren sowie  Teams -Umgebungen verwalten.
+subTitle: Kandidaten für diese Prüfung sind Support-Techniker, die Microsoft Teams -Umgebungen unterstützen, Fehler in Bereitstellungen beheben, die Leistung optimieren, Telemetrie- und Protokolldaten sammeln und analysieren sowie  Teams -Umgebungen verwalten.
 levels:
 - intermediate
 skills:
